--- a/src/main/resources/templates/fragments/admin-header.html
+++ b/src/main/resources/templates/fragments/admin-header.html
@@ -16,14 +16,11 @@
     <div class="navbar navbar-default">
         <span class="header-title" th:text="#{site.name}"></span>
         <div class="navigation">
-            <div class="header-link"><a href="/" th:text="#{main}"></a></div>
             <div class="header-link"><a href="/orders" th:text="#{orders}"></a></div>
             <div class="header-link"><a href="/book" th:text="#{books}"></a></div>
             <div class="header-link"><a href="/logout" th:text="#{logout}"></a></div>
-            <div class="header-link"><a href="/orders?language=en"
-                                        th:text="#{label.lang.en}"></a></div>
-            <div class="header-link"><a href="/orders?language=ua"
-                                        th:text="#{label.lang.ua}"></a></div>
+            <div class="header-link"><a href="/orders?language=en" th:text="#{label.lang.en}"></a></div>
+            <div class="header-link"><a href="/orders?language=ua" th:text="#{label.lang.ua}"></a></div>
         </div>
     </div>
 </header>
