--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           crossorigin="anonymous">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" th:href="@{/css/header.css}"/>
 </head>
 <body style="text-align: center">
 <div id="app">
