--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -10,6 +10,7 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script type="text/javascript" src="js/orders.js"></script>
+    <link rel="stylesheet" th:href="@{/css/header.css}"/>
 </head>
 <body>
 <div id="app">
