add styles for filter

--- a/src/main/resources/templates/fragments/filter.html
+++ b/src/main/resources/templates/fragments/filter.html
@@ -1,6 +1,6 @@
 !DOCTYPE html>
 <html lang="en">
-<html lang="en" xmlns:v-bind="http://www.w3.org/1999/xhtml" xmlns:v-on="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:v-bind="http://www.w3.org/1999/xhtml">
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
@@ -14,43 +14,31 @@
 </head>
 <body>
 <div th:fragment="filter">
-    <div class="w3-sidebar w3-light-grey w3-bar-block"
-         style="width:17%; float: left; padding-top: 10%; background-color: lightgrey;">
+    <div class="w3-sidebar w3-light-grey w3-bar-block">
         <!--            name-->
         <div>
-            <input id="partOfName" class="form-control" type="text" v-model="partOfName">
-            <label for="partOfName" th:text="#{part.of.name}"></label>
+            <input id="partOfName" class="form-control" type="text" th:placeholder="#{part.of.name}"
+                   v-model="partOfName">
         </div>
-        <br>
-        <!--            tags-->
-        <div id="tagsCheckbox" class="col-md-6 boxes">
+        <div class="col-md-6 boxes">
+            <!--            tags-->
+            <label th:text="#{select.tags}"></label>
             <div v-for="tag in tags">
-                <div style="display: inline;">
-                    <input style="display: inline; float: left; margin-left: 0px" type="checkbox"
-                           v-bind:value="tag"
-                           v-model="addedTags">
-                    <h6 style="display: inline; margin-right: 0px;">{{tag}}</h6>
-                </div>
+                <input class="input-checkbox" type="checkbox"
+                       v-bind:value="tag"
+                       v-model="addedTags">
+                {{tag}}
             </div>
-        </div>
-        <br>
-        <label for="tagsCheckbox" style="margin: 20px ;" th:text="#{select.tags}"></label>
-        <br>
-        <!--            authors-->
-        <div style="padding-top: 10px" id="authorsCheckbox" class="col-md-6 boxes">
+            <!--            authors-->
+            <label th:text="#{select.authors}"></label>
             <div v-for="author in authors">
-                <div style="display: inline;">
-                    <input style="display: inline; float: left; margin-left: 0px" type="checkbox"
-                           v-bind:value="author"
-                           v-model="addedAuthors">
-                    <h6 style="display: inline;">{{author}}</h6>
-                </div>
+                <input class="input-checkbox" type="checkbox"
+                       v-bind:value="author"
+                       v-model="addedAuthors">
+                {{author}}
             </div>
+            <button class="btn btn-warning" @click="changeList" th:text="#{load}"></button>
         </div>
-        <br>
-        <label for="authorsCheckbox" style="margin: 20px" th:text="#{select.authors}"></label>
-        <br>
-        <button class="btn btn-warning" style="width: 30%;" @click="changeList" th:text="#{load}"></button>
     </div>
 </div>
 </body>
