--- a/src/main/resources/templates/prospectus.html
+++ b/src/main/resources/templates/prospectus.html
@@ -12,6 +12,8 @@
     <script type="text/javascript" src="js/prospectus.js"></script>
     <link rel="stylesheet" th:href="@{/css/header.css}"/>
     <link rel="stylesheet" th:href="@{/css/filter.css}"/>
+    <link rel="stylesheet" th:href="@{/css/footer.css}"/>
+    <link rel="stylesheet" th:href="@{/css/prospectus.css}"/>
 </head>
 <body style="text-align: center">
 <div id="app">
