--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -11,6 +11,8 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script type="text/javascript" src="js/orders.js"></script>
     <link rel="stylesheet" th:href="@{/css/header.css}"/>
+    <link rel="stylesheet" th:href="@{/css/footer.css}"/>
+    <link rel="stylesheet" th:href="@{/css/orders.css}"/>
 </head>
 <body>
 <div id="app">
