--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -13,11 +13,12 @@
     <link rel="stylesheet" th:href="@{/css/header.css}"/>
     <link rel="stylesheet" th:href="@{/css/footer.css}"/>
     <link rel="stylesheet" th:href="@{/css/user.css}"/>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body style="text-align: center">
 <div id="app">
     <div th:replace="fragments/user-header :: header">...</div>
-    <div style="padding-top: 7%; text-align: center; width: 100%; float: right">
+    <div class="check-fragment">
         <input type="radio" id="one" value="1" v-model="picked">
         <label for="one" th:text="#{orders}"></label>
         <input type="radio" id="two" value="2" v-model="picked">
@@ -26,26 +27,29 @@
     </div>
     <!--        passive orders -->
     <div v-if="picked==1">
-        <table style="width: 100%; padding-top: 10%; display: table" class="table table-borderless">
+        <table class="table table-borderless">
             <thead>
             <tr>
+                <th>#</th>
                 <th th:text="#{book.name}"></th>
                 <th th:text="#{order.date}"></th>
             </tr>
             </thead>
             <tbody>
-            <tr v-for="order in passiveOrders">
-                <td><h1 v-text="order.bookName"></h1></td>
-                <td><h1 v-text="order.startDate"></h1></td>
+            <tr v-for="(order, index) in passiveOrders">
+                <td>{{index+1}}</td>
+                <td>{{order.bookName}}</td>
+                <td>{{order.startDate}}</td>
             </tr>
             </tbody>
         </table>
     </div>
     <!--    active orders-->
     <div v-else>
-        <table style="width: 100%; padding-top: 10%; display: table" class="table table-borderless">
+        <table class="table table-borderless">
             <thead>
             <tr>
+                <th>#</th>
                 <th th:text="#{book.name}"></th>
                 <th th:text="#{start.date}"></th>
                 <th th:text="#{end.date}"></th>
@@ -53,12 +57,15 @@
             </tr>
             </thead>
             <tbody>
-            <tr v-for="order in activeOrders">
-                <td><h1 v-text="order.bookName"></h1></td>
-                <td><h1 v-text="order.startDate"></h1></td>
-                <td><h1 v-text="order.endDate"></h1></td>
+            <tr v-for="(order, index) in activeOrders">
+                <td>{{index+1}}</td>
+                <td>{{order.bookName}}</td>
+                <td>{{order.startDate}}</td>
+                <td>{{order.endDate}}</td>
                 <td>
-                    <button class="btn btn-warning" v-on:click="returnBook(order)" th:text="#{return}"></button>
+                    <button class="btn btn-danger" v-on:click="returnBook(order)">
+                        <i class="fa fa-undo" aria-hidden="true"></i>
+                    </button>
                 </td>
             </tr>
             </tbody>
