remove less styles from user page

--- a/src/main/resources/static/css/user.css
+++ b/src/main/resources/static/css/user.css
@@ -14,3 +14,12 @@ th {
     width: 100%;
     float: right;
 }
+
+input {
+    margin-top: 17px;
+}
+
+body {
+    font-family: Arial;
+    font-style: normal;
+}
