--- a/src/main/resources/templates/reg.html
+++ b/src/main/resources/templates/reg.html
@@ -10,10 +10,10 @@
     <link rel="stylesheet" th:href="@{/css/header.css}"/>
     <link rel="stylesheet" th:href="@{/css/footer.css}"/>
     <link rel="stylesheet" th:href="@{/css/reg.css}"/>
-<body style="text-align:center">
+<body>
 <div id="app">
     <div th:replace="fragments/guest-header :: header">...</div>
-    <div style="margin:0 auto;width:75%;text-align:left">
+    <div class="form-wrapper">
         <p class="h3 text-center mb-4" th:text="#{sign.up}"></p>
         <!--/*@thymesVar id="user" type="extclasses.final_project_spring.dto.UserDTO"*/-->
         <form action="#" th:action="@{/reg}" th:object="${user}" method="post" style="max-width: 500px; margin: auto;">
@@ -29,30 +29,12 @@
             <input type="password" class="form-control" th:placeholder="#{password}" th:field="*{password}">
             <p th:each="error: ${#fields.errors('password')}"
                th:text="${error}" class="alert alert-warning">Validation error</p>
-            <div style="text-align: center; margin-top: 20px">
+            <div>
                 <input class="btn btn-warning" type="submit" name="submit" th:value="#{submit}">
             </div>
         </form>
     </div>
     <div th:replace="fragments/footer :: footer">...</div>
 </div>
-<style lang="less">
-    input {
-        margin-top: 17px;
-    }
-
-    body {
-        font-family: Arial;
-        font-style: normal;
-    }
-
-    footer {
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        width: 100%;
-        height: 80px;
-    }
-</style>
 </body>
 </html>
