--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,40 +9,23 @@
           crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/css/header.css}"/>
     <link rel="stylesheet" th:href="@{/css/footer.css}"/>
-    <link rel="stylesheet" th:href="@{/css/login.css}"/>
-<body style="text-align:center">
+    <link rel="stylesheet" th:href="@{/css/reg.css}"/>
+<body>
 <div id="app">
     <div th:replace="fragments/guest-header :: header">...</div>
-    <div style="margin:0 auto;width:75%;text-align:left">
-        <p class="h3 text-center mb-4" th:text = "#{sign.in}"></p>
-        <form action="login" method="post" style="max-width: 500px; margin: auto;">
-            <input id="username" class="form-control" th:placeholder="#{username}" type="text" name="username" v-model="username">
+    <div class="form-wrapper">
+        <p class="h3 text-center mb-4" th:text="#{sign.in}"></p>
+        <form action="login" method="post">
+            <input id="username" class="form-control" th:placeholder="#{username}" type="text" name="username"
+                   v-model="username">
             <input type="password" class="form-control" th:placeholder="#{password}" name="password" id="password"
                    v-model="password">
-            <div style="text-align: center; margin-top: 20px">
+            <div>
                 <input class="btn btn-warning" type="submit" name="submit" th:value="#{submit}">
             </div>
         </form>
     </div>
     <div th:replace="fragments/footer :: footer">...</div>
 </div>
-<style lang="less">
-    input {
-        margin-top: 17px;
-    }
-
-    body {
-        font-family: Arial;
-        font-style: normal;
-    }
-
-    footer {
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        width: 100%;
-        height: 80px;
-    }
-</style>
 </body>
 </html>
