--- a/src/main/resources/templates/prospectus.html
+++ b/src/main/resources/templates/prospectus.html
@@ -14,84 +14,54 @@
     <link rel="stylesheet" th:href="@{/css/filter.css}"/>
     <link rel="stylesheet" th:href="@{/css/footer.css}"/>
     <link rel="stylesheet" th:href="@{/css/prospectus.css}"/>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body style="text-align: center">
+<body>
 <div id="app">
     <div th:replace="fragments/user-header :: header">...</div>
     <main>
         <!--        filter-->
         <div th:insert="fragments/filter.html :: filter"></div>
         <!--        books -->
-        <div style="padding-top: 10%;">
-            <table style="width: 75%;margin-left:25%; padding-top: 10%; display: table" class="table table-borderless">
+        <div class="table-wrapper">
+            <table class="table table-borderless">
                 <thead>
                 <tr>
-                    <th th:text="#{name}">name</th>
-                    <th th:text="#{authors}">authors</th>
-                    <th th:text="#{tags}">tags</th>
-                    <th th:text="#{order}">order</th>
+                    <th>#</th>
+                    <th th:text="#{name}"></th>
+                    <th th:text="#{authors}"></th>
+                    <th th:text="#{tags}"></th>
+                    <th th:text="#{order}"></th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr v-for="book in books">
-                    <td><h1 v-text="book.name"></h1></td>
+                <tr v-for="(book, index) in books">
+                    <td>{{index+1}}</td>
+                    <td>{{book.name}}</td>
                     <td>
                         <div v-for="author in book.authors">
-                            <h1 v-text="author">
-                            </h1>
+                            {{author}}
                         </div>
                     </td>
                     <td>
                         <div v-for="tag in book.tags">
-                            <h1 v-text="tag">
-                            </h1>
+                            {{tag}}
                         </div>
                     </td>
                     <td>
-                        <button class="btn btn-warning" style="height: 100%; width: 100%;" v-on:click="orderBook(book)"
-                                th:text="#{order}">
+                        <button class="btn btn-success" v-on:click="orderBook(book)">
+                            <i class="fa fa-angle-right" aria-hidden="true"></i>
                         </button>
                     </td>
                 </tr>
                 </tbody>
             </table>
         </div>
-        <button class="btn btn-warning" style="width: 30%;" @click="loadMore()" th:text="#{load.more}">
+        <button class="btn btn-success" @click="loadMore()">
+            <i class="fa fa-chevron-down"></i>
         </button>
     </main>
     <div th:replace="fragments/footer :: footer">...</div>
 </div>
-<style lang="less">
-    input {
-        margin-top: 17px;
-    }
-
-    body {
-        font-family: Arial;
-        font-style: normal;
-    }
-
-    header {
-        position: fixed;
-        height: 10%;
-        left: 0;
-        top: 0;
-        width: 100%;
-        z-index: 10;
-    }
-
-    span {
-        font-size: 30px;
-        height: content-box;
-    }
-
-    /*footer {*/
-    /*    position: absolute;*/
-    /*    left: 0;*/
-    /*    bottom: 0;*/
-    /*    width: 100%;*/
-    /*    height: 80px;*/
-    /*}*/
-</style>
 </body>
 </html>
