add styles for orders page

--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -12,12 +12,13 @@
     <script type="text/javascript" src="js/orders.js"></script>
     <link rel="stylesheet" th:href="@{/css/header.css}"/>
     <link rel="stylesheet" th:href="@{/css/footer.css}"/>
-    <link rel="stylesheet" th:href="@{/css/orders.css}"/>
+    <link rel="stylesheet" th:href="@{/css/user.css}"/>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 <div id="app">
     <div th:replace="fragments/admin-header :: header">...</div>
-    <div style="padding-top: 7%; text-align: center; width: 100%; float: right">
+    <div class="check-fragment">
         <input type="radio" id="one" value="1" v-model="picked">
         <label for="one" th:text="#{orders}"></label>
         <input type="radio" id="two" value="2" v-model="picked">
@@ -26,9 +27,10 @@
     </div>
     <!--        passive orders -->
     <div v-if="picked==1">
-        <table style="width: 100%; padding-top: 10%; display: table" class="table table-borderless">
+        <table class="table table-borderless">
             <thead>
             <tr>
+                <th>#</th>
                 <th th:text="#{book.name}"></th>
                 <th th:text="#{username}"></th>
                 <th th:text="#{order.date}"></th>
@@ -36,12 +38,15 @@
             </tr>
             </thead>
             <tbody>
-            <tr v-for="order in passiveOrders">
-                <td><h1 v-text="order.bookName"></h1></td>
-                <td><h1 v-text="order.userName"></h1></td>
-                <td><h1 v-text="order.startDate"></h1></td>
+            <tr v-for="(order, index) in passiveOrders">
+                <td>{{index+1}}</td>
+                <td>{{order.bookName}}</td>
+                <td>{{order.userName}}</td>
+                <td>{{order.startDate}}</td>
                 <td>
-                    <button class="btn btn-warning" v-on:click="permitOrder(order)" th:text="#{permit}"></button>
+                    <button class="btn btn-success" v-on:click="permitOrder(order)">
+                        <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                    </button>
                 </td>
             </tr>
             </tbody>
@@ -49,9 +54,10 @@
     </div>
     <!--    active orders-->
     <div v-else>
-        <table style="width: 100%; padding-top: 10%; display: table" class="table table-borderless">
+        <table class="table table-borderless">
             <thead>
             <tr>
+                <th>#</th>
                 <th th:text="#{book.name}"></th>
                 <th th:text="#{username}"></th>
                 <th th:text="#{start.date}"></th>
@@ -59,40 +65,17 @@
             </tr>
             </thead>
             <tbody>
-            <tr v-for="order in activeOrders">
-                <td><h1 v-text="order.bookName"></h1></td>
-                <td><h1 v-text="order.userName"></h1></td>
-                <td><h1 v-text="order.startDate"></h1></td>
-                <td><h1 v-text="order.endDate"></h1></td>
+            <tr v-for="(order, index) in activeOrders">
+                <td>{{index+1}}</td>
+                <td>{{order.bookName}}</td>
+                <td>{{order.userName}}</td>
+                <td>{{order.startDate}}</td>
+                <td>{{order.endDate}}</td>
             </tr>
             </tbody>
         </table>
     </div>
     <div th:replace="fragments/footer :: footer">...</div>
 </div>
-<style lang="less">
-    input {
-        margin-top: 17px;
-    }
-
-    body {
-        font-family: Arial;
-        font-style: normal;
-    }
-
-    header {
-        position: fixed;
-        height: 10%;
-        left: 0;
-        top: 0;
-        width: 100%;
-        z-index: 10;
-    }
-
-    span {
-        font-size: 30px;
-        height: content-box;
-    }
-</style>
 </body>
 </html>
