--- a/src/main/resources/templates/reg.html
+++ b/src/main/resources/templates/reg.html
@@ -9,7 +9,7 @@
           crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/css/header.css}"/>
     <link rel="stylesheet" th:href="@{/css/footer.css}"/>
-    <link rel="stylesheet" th:href="@{/css/reg.css}"/>
+    <link rel="stylesheet" th:href="@{/static/css/guest.css}"/>
 <body>
 <div id="app">
     <div th:replace="fragments/guest-header :: header">...</div>
