move footer from divs and add styles for footer

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -11,8 +11,10 @@
 </head>
 <body>
 <div th:fragment="footer">
-    <span th:text="#{site.name}"></span>
-    <span> - 2020</span>
+    <footer>
+        <span th:text="#{site.name}"></span>
+        <span> - 2020</span>
+    </footer>
 </div>
 </body>
 </html>
