--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -8,7 +8,7 @@
           crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/css/header.css}"/>
     <link rel="stylesheet" th:href="@{/css/footer.css}"/>
-    <link rel="stylesheet" th:href="@{/static/css/guest.css}"/>
+    <link rel="stylesheet" th:href="@{/css/guest.css}"/>
 </head>
 <body>
 <div id="app">
@@ -30,7 +30,7 @@
             книги и читатели, которые пользуются книгой.
         </strong>
     </div>
-    <div th:replace="fragments/footer :: footer">...</div>
 </div>
+<div th:replace="fragments/footer :: footer">...</div>
 </body>
 </html>
