--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="js/user.js"></script>
     <link rel="stylesheet" th:href="@{/css/header.css}"/>
     <link rel="stylesheet" th:href="@{/css/footer.css}"/>
-    <link rel="stylesheet" th:href="@{/static/css/show-orders.css}"/>
+    <link rel="stylesheet" th:href="@{/css/show-orders.css}"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body style="text-align: center">
@@ -71,7 +71,7 @@
             </tbody>
         </table>
     </div>
-    <div th:replace="fragments/footer :: footer">...</div>
 </div>
+<div th:replace="fragments/footer :: footer">...</div>
 </body>
 </html>
